use % instead of vw/vh for .fullsize modifier (some bug with horizontal scroll appeared in sticky-header example)

--- a/docs/common.css
+++ b/docs/common.css
@@ -10,6 +10,10 @@
     -webkit-font-smoothing: antialiased;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-size: 16px;
 }
