--- a/src/flexbox.scss
+++ b/src/flexbox.scss
@@ -11,11 +11,11 @@ $flexbox-gap-size: 1rem !default;
   }
 
   &.fullsize {
-    min-width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
     &-fixed {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
     }
   }
 
